--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,12 @@
 .programEvalHeading {
 	margin-bottom: -5px;background: #DCDCDC !important;padding: 10px
 }
+
+#login-page {
+	background: url(../img/bpsu.jpg) no-repeat center center fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
